# url_tiny

./: pyproject.toml  tiny.db
src/url_tiny/: .env  config.py  crud.py  keygen.py  main.py  models.py
tests/: test_url_tiny.py
