[tool.poetry]
name = "url_tiny"
version = "0.1.0"
description = ""
authors = ["Andrew Downing <andrew.c.downing@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
python-dotenv = "^0.20.0"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
